# chdb-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json  smoketest.py
.github/workflows/: ci.yml  publish.yml
src/chdb_mcp/: __init__.py  __main__.py  config.py  server.py  utils.py
tests/: test_tools.py
